--- a/.env_example
+++ b/.env_example
@@ -11,7 +11,7 @@ export DEBUG=false
 export TRIANNON_LOG_FILE='log/triannon_client.log'
 
 # Configure the triannon service
-export TRIANNON_HOST='triannon.example.org'
+export TRIANNON_HOST='http://localhost:3000'
 export TRIANNON_USER=''
 export TRIANNON_PASS=''
 
