--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/fails_to_delete_an_open_annotation_that_does_NOT_exist.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/fails_to_delete_an_open_annotation_that_does_NOT_exist.yml
@@ -1,6 +1,65 @@
 ---
 http_interactions:
 - request:
+    method: get
+    uri: http://localhost:3000/annotations/anno_does_not_exist
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/ld+json
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 404
+      message: 'Not Found '
+    headers:
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      Content-Type:
+      - text/html; charset=utf-8
+      Cache-Control:
+      - no-cache
+      X-Request-Id:
+      - adfb72d9-9a56-472f-a16a-575fc1830ef6
+      X-Runtime:
+      - '0.013568'
+      Server:
+      - WEBrick/1.3.1 (Ruby/2.1.5/2014-11-13)
+      Date:
+      - Thu, 23 Apr 2015 00:11:31 GMT
+      Content-Length:
+      - '1452'
+      Connection:
+      - Keep-Alive
+    body:
+      encoding: UTF-8
+      string: "<h2>error getting anno_does_not_exist from LDP</h2><html>\n<head>\n<meta
+        http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
+        404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
+        accessing /fedora/rest/anno/anno_does_not_exist. Reason:\n<pre>    Not Found</pre></p><hr
+        /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n\n</body>\n</html>\n"
+    http_version: 
+  recorded_at: Thu, 23 Apr 2015 00:11:31 GMT
+- request:
     method: delete
     uri: http://localhost:3000/annotations/anno_does_not_exist
     body:
@@ -29,13 +88,13 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - b40d56d7-4fc0-4648-81ac-ed0a750f758c
+      - c82ae299-e99f-4a45-b1d5-d639cde5d5c7
       X-Runtime:
-      - '0.015221'
+      - '0.015887'
       Server:
       - WEBrick/1.3.1 (Ruby/2.1.5/2014-11-13)
       Date:
-      - Wed, 22 Apr 2015 18:16:07 GMT
+      - Thu, 23 Apr 2015 00:11:32 GMT
       Content-Length:
       - '1452'
       Connection:
@@ -60,5 +119,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Wed, 22 Apr 2015 18:16:07 GMT
+  recorded_at: Thu, 23 Apr 2015 00:11:32 GMT
 recorded_with: VCR 2.9.3
